--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@ body {
    width: 100%;     /*set the width of the bar */
    position:fixed;  /*make the nav always stay on top */
    top :0;     /*position the navbar at the top of the page */ 
-   
+   z-index: 99999;
 }
 nav {
 width:100%;
