--- a/header.html
+++ b/header.html
@@ -106,7 +106,7 @@ border : 1px solid #ccc;
 <body>
 
 <div class="navigate"> 
-   <a href="project.html"><img class="logo" src="image/icon.jpg"></a>
+   <a href="project.html"><img class="logo" src="icon.jpg"></a>
 
 <nav>
 <ul>
