--- a/header1.html
+++ b/header1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="shortcut icon" type="image/jpg" href="image/icon.jpg"/>
+<link rel="shortcut icon" type="image/jpg" href="icon.jpg"/>
 
 
 
