--- a/header2.html
+++ b/header2.html
@@ -3,11 +3,11 @@
 <body>
 
 <div class="navigate"> 
-   <a href="project.html"><img class="logo" src="image/icon.jpg"></a>
+   <a href="homepage.html"><img class="logo" src="icon.jpg" style="margin: 15px 0px 0px 50px;"></a>
 
 <nav>
 <ul>
-    <li><a href="gallery.html">Home</a></li> 
+    <li><a href="homepage.html">Home</a></li> 
 	
 	<li><a href="#">College</a></li>
 
