--- a/header2.html
+++ b/header2.html
@@ -7,13 +7,13 @@
 
 <nav>
 <ul>
-    <li><a href="homepage.html">Home</a></li> 
+    <li><a href="homepage.html" style="text-decoration: none; color: white;">Home</a></li> 
 	
-	<li><a href="#">College</a></li>
+	<li><a href="#" style="text-decoration: none; color: white;">College</a></li>
 
-	<li><a href="courses.html">Comparision</a></li>
-	<li><a href="events.html">About Us</a></li>
-	<li><a href="project.html">Rate/Review</a></li>
+	<li><a href="courses.html" style="text-decoration: none; color: white;">Comparision</a></li>
+	<li><a href="events.html" style="text-decoration: none; color: white;">About Us</a></li>
+	<li><a href="project.html" style="text-decoration: none; color: white;">Rate/Review</a></li>
 	<button type="Submit">Register</button>
 	<a href="login.html"><button type="Submit">Login</button></a>
 	<input type="text" placeholder="Search.."/>
