added database and can search now
ps u need that set up database first cai only can try haha

--- a/header2.html
+++ b/header2.html
@@ -9,7 +9,7 @@
 <ul>
     <li><a href="homepage.html" style="text-decoration: none; color: white;">Home</a></li> 
 	
-	<li><a href="#" style="text-decoration: none; color: white;">College</a></li>
+	<li><a href="yp.php" style="text-decoration: none; color: white;">College</a></li>
 
 	<li><a href="courses.html" style="text-decoration: none; color: white;">Comparision</a></li>
 	<li><a href="events.html" style="text-decoration: none; color: white;">About Us</a></li>
