--- a/header2.html
+++ b/header2.html
@@ -11,7 +11,7 @@
 	
 	<li><a href="yp.php" style="text-decoration: none; color: white;">College</a></li>
 
-	<li><a href="courses.html" style="text-decoration: none; color: white;">Comparision</a></li>
+	<li><a href="compare.php" style="text-decoration: none; color: white;">Comparision</a></li>
 	<li><a href="events.html" style="text-decoration: none; color: white;">About Us</a></li>
 	<li><a href="project.html" style="text-decoration: none; color: white;">Rate/Review</a></li>
 	<button type="Submit">Register</button>
