--- a/homepage.html
+++ b/homepage.html
@@ -316,7 +316,7 @@ body {
 			<div class="zoomin">
             <h2>Every College Decides Your Future</h2>
 			</div>
-            <a href="https://example.com/" class="btn">Start Now</a>
+            <a href="yp.php" class="btn">Start Now</a>
         </div>
 	</div>
 	</section>
