--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home Page</title>
+    <link rel="shortcut icon" type="image/jpg" href="icon.jpg"/>
+    <title>Edancation</title>
 </head>
 <style>
 body {
