--- a/header.html
+++ b/header.html
@@ -119,7 +119,7 @@ border : 1px solid #ccc;
 	<li><a href="project.html">Rate/Review</a></li>
 	<button type="Submit">Register</button>
 	<a href="login.html"><button type="Submit">Login</button></a>
-	<input type="text" placeholder="Search.."/>
+	<input type="text" placeholder="Search..."/>
 </ul>
 </nav>
 </div>
