--- a/header2.html
+++ b/header2.html
@@ -17,7 +17,7 @@
 	<button type="Submit">Register</button>
 	<a href="login.html"><button type="Submit">Login</button></a>
 	<button type="submit" style="background-color: green;"><span class="fa fa-search"></span></button>
-	<input type="text" name="search_content" placeholder="Search.."/> 
+	<input type="text" name="search_content" placeholder="Search..."/> 
 	<input type="hidden" name="searched" value="true">
 </ul>
 </nav>
