--- a/headercss.html
+++ b/headercss.html
@@ -72,6 +72,7 @@ background: grey;
 border-radius:10px;
 }
 .navigate input[type=text] {
+width: 240px;
 float:right;
 padding:3px;
 margin-top:12px;
