add nav on homepage

--- a/header2.html
+++ b/header2.html
@@ -1,13 +1,9 @@
-</style>
-</head>
-<body>
-
 <div class="navigate"> 
-   <a href="homepage.html"><img class="logo" src="icon.jpg" style="margin: 15px 0px 0px 50px;"></a>
+   <a href="homepage.php"><img class="logo" src="icon.jpg" style="margin: 15px 0px 0px 50px;"></a>
 <form action="yp.php" method="get">
 <nav>
 <ul>
-    <li><a href="homepage.html" style="text-decoration: none; color: white;">Home</a></li> 
+    <li><a href="homepage.php" style="text-decoration: none; color: white;">Home</a></li> 
 	
 	<li><a href="yp.php" style="text-decoration: none; color: white;">College</a></li>
 
