--- a/header1.html
+++ b/header1.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <link rel="shortcut icon" type="image/jpg" href="icon.jpg"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 
