--- a/header1.html
+++ b/header1.html
@@ -3,6 +3,7 @@
 <head>
 <link rel="shortcut icon" type="image/jpg" href="icon.jpg"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 
 
