--- a/homepagecss.html
+++ b/homepagecss.html
@@ -123,7 +123,7 @@ body {
     border-radius: 20px;
 	
 	/* Background styles */
-    background-color: rgba(0, 108, 240, 1);
+    background-color: #3b5999;
 }
 
 .prev,
@@ -179,6 +179,7 @@ body {
 	height:30%;
 	margin-left:auto;
 	margin-right:auto;
+  hover:none;
 }
 .img-container{
 	margin-left:auto;
@@ -218,5 +219,21 @@ body {
 	padding:10px;
 	width:328px;
 	border-radius: 20px;
+}
+
+.signUpbtn{
+  margin-right:80%;
+  margin-bottom:3%;
+  width: 200px;
+  border-color: green;
+  background-color: #3b5999;
+         border: none;
+         color: white;
+         padding: 10px 34px;
+         text-align: center;
+         text-decoration: none;
+         display: inline-block;
+         font-size: 15px;
+         cursor: pointer;
 }
 </style>
